NEB-146 fix change location screen overlap

--- a/src/app/v2/components/location-edit/location-edit.component.scss
+++ b/src/app/v2/components/location-edit/location-edit.component.scss
@@ -4,6 +4,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+        padding-bottom: env(safe-area-inset-bottom);
 
         .map {
             background-color: white;
